--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "http-errors": "~1.6.3",
     "mongoose": "^5.12.3",
     "morgan": "~1.9.1",
+    "needle": "^2.6.0",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
