--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
   "dependencies": {
     "async-waterfall": "^0.1.5",
     "bcrypt-nodejs": "0.0.3",
+    "connect-ensure-login": "^0.1.1",
+    "connect-flash": "^0.1.1",
+    "connect-redis": "^5.1.0",
     "cookie-parser": "~1.4.4",
     "csurf": "^1.11.0",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
     "mongoose": "^5.12.3",
     "morgan": "~1.9.1",
@@ -21,7 +25,8 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "redis": "^3.1.1"
   },
   "license": "Apache-2.0"
 }
