--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "~4.16.1",
     "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
+    "json2csv": "^5.0.6",
     "mongoose": "^5.12.3",
     "morgan": "~1.9.1",
     "needle": "^2.6.0",
