--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "express-session": "^1.17.1",
+    "fast-csv": "^4.3.6",
     "http-errors": "~1.6.3",
     "json2csv": "^5.0.6",
     "mongoose": "^5.12.3",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
     "needle": "^2.6.0",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
